<package>
<name>ros_rt_wmp_msgs</name>
<description>Messages</description>
<maintainer email="dantard@unizar.es">Danilo Tardioli</maintainer>
<version>1.1.0</version>
<author>Danilo Tardioli, dantard@unizar.es</author>
<license>GPL v2 </license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<build_depend>roscpp</build_depend>
</package>


